// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Logout Warning Modal Should match the snapshot 1`] = `
<BaseComponent
  id="logout-warning-modal"
  size="lg"
  style={
    Object {
      "zIndex": 100,
    }
  }
>
  <Component
    className="h4"
  >
    Inactivity Logout Warning
  </Component>
  <Component
    style={
      Object {
        "padding": "2em",
      }
    }
  >
    <BaseComponent
      cols={12}
    >
      <Component>
        Your session is about to expire due to inactivity.
      </Component>
      <Component>
        You will be logged out in 
        11
         seconds.
      </Component>
      <Component
        justify="end"
        style={
          Object {
            "marginTop": "1em",
          }
        }
      >
        <form
          action="/logout"
          method="post"
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <Button
            id="logout-warning-modal-logout-button"
            type="submit"
            variant="secondary"
          >
            Logout
          </Button>
        </form>
        <Button
          id="logout-warning-modal-remain-active-button"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "1em",
            }
          }
          variant="primary"
        >
          Remain active
        </Button>
      </Component>
    </BaseComponent>
  </Component>
</BaseComponent>
`;

exports[`The Logout Warning Modal Should use the optional render method if provided 1`] = `
<div>
  There are 
  11
   seconds left.
</div>
`;

exports[`The Logout Warning Modal should countdown seconds 1`] = `
<div
  className="sc-iCfMLu sc-furwcr kQXSYc gDlUxH pg-modal-container"
  id="logout-warning-modal"
  size="lg"
  style={
    Object {
      "zIndex": 100,
    }
  }
>
  <div
    className="sc-pVTFL fdkSXM pg-modal-main"
  >
    <header
      className="sc-jrQzAO eeqVZV pg-modal-header h4"
    >
      Inactivity Logout Warning
    </header>
    <div
      className="sc-kDTinF cIwtan pg-modal-content"
      style={
        Object {
          "padding": "2em",
        }
      }
    >
      <div
        className="sc-fFeiMQ bgyiGU pg-grid-container"
        cols={12}
      >
        <div
          className="sc-bkkeKt sc-ieecCq hOEAKj fEyLc pg-grid-row"
        >
          Your session is about to expire due to inactivity.
        </div>
        <div
          className="sc-bkkeKt sc-ieecCq hOEAKj fEyLc pg-grid-row"
        >
          You will be logged out in 
          16
           seconds.
        </div>
        <div
          className="sc-bkkeKt sc-ieecCq eHeiPc fEyLc pg-grid-row"
          style={
            Object {
              "marginTop": "1em",
            }
          }
        >
          <form
            action="/logout"
            method="post"
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <button
              className="sc-kfPuZi jgizTO pg-button"
              id="logout-warning-modal-logout-button"
              type="submit"
            >
              Logout
            </button>
          </form>
          <button
            className="sc-kfPuZi epUors pg-button"
            id="logout-warning-modal-remain-active-button"
            onClick={[Function]}
            style={
              Object {
                "marginLeft": "1em",
              }
            }
          >
            Remain active
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
